--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <script src="/src/assets/shim.min.js"></script>
-  <link href="/src/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/src/assets/bootstrap/css/bootstrap.min.css">
   <script src="/src/assets/bootstrap/js/jquery.min.js"></script>
   <script src="/src/assets/bootstrap/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/src/assets/font-awesome/css/font-awesome.min.css">
 
-  <script src="/src/assets/maps.js"></script>
+  <!--<script src="/src/assets/map/maps.js"></script>
+  <link rel="stylesheet" href="/src/assets/map/style1.3.26.css">-->
+  <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=21be225a58733d0c8f8ec10e1b381fd5"></script>
   <script src="/src/assets/md5.min.js"></script>
 </head>
 <body>
